--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  nearby_connections: 
+    path: ./../nearby_connections
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -27,7 +28,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  nearby_connections: ^1.0.2+1
+  # nearby_connections: ^1.0.2+1
   provider: ^3.2.0
   file_picker: ^1.4.3+1
 
