--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  nearby_connections: 
-    path: ./../nearby_connections
+  nearby_connections: ^1.0.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  shared_preferences: ^0.5.6+3
 
 dev_dependencies:
   flutter_test:
