--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,16 +19,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  nearby_connections: ^1.0.3
+  nearby_connections: ^1.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.5.6+3
+  circular_reveal_animation: ^1.1.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  # nearby_connections: ^1.0.2+1
   provider: ^3.2.0
   file_picker: ^1.4.3+1
 
@@ -59,10 +59,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: DancingScript
+      fonts:
+        - asset: assets/Dancing_Script/DancingScript-VariableFont_wght.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
